# advertising_oaid

./: BUILD.gn  README.md  bundle.json  oaid.gni
etc/init/: BUILD.gn  oaidservice.cfg
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: oaid_service_client.h  oaid_service_interface.h  oaid_service_proxy.h
interfaces/innerkits/src/: oaid_service_client.cpp  oaid_service_proxy.cpp
interfaces/kits/js/declaration/: BUILD.gn
interfaces/kits/js/declaration/api/: @ohos.identifier.oaid.d.ts
interfaces/kits/js/napi/oaid/: BUILD.gn
interfaces/kits/js/napi/oaid/include/: oaid.h  oaid_init.h
interfaces/kits/js/napi/oaid/src/: oaid.cpp  oaid_init.cpp
profile/: 6101.xml  BUILD.gn
services/: BUILD.gn
services/oaid_manager/include/: bundle_mgr_helper.h  oaid_death_recipient.h  oaid_service.h  oaid_service_define.h  oaid_service_stub.h
services/oaid_manager/src/: bundle_mgr_helper.cpp  oaid_death_recipient.cpp  oaid_service.cpp  oaid_service_stub.cpp
test/fuzztest/oaid_fuzzer/: BUILD.gn  oaid_fuzzer.cpp
utils/: BUILD.gn
utils/native/include/: oaid_common.h  oaid_hilog_wreapper.h
